feat : application.properties 설정 추가, spring.jpa.hibernate.ddl-auto=update 따라서 테이블 만드는 SQL문이 굳이 필요하지 않습니다 이제부터는

--- a/assetManager/src/main/resources/application.properties
+++ b/assetManager/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 server.port=8888
 
+
+# 스키마생성 (create, create-drop, update:변경 부분만 반영, validate, none)
+# table을 자동생성할것인지 , 수동생성할것인지
+# 큰규모의 프로젝트는 테이블을 별도로 생성하고 코드를 작성하는 것이 일반적이다.
+spring.jpa.hibernate.ddl-auto=update
 # API 호출시, SQL 문을 콘솔에 출력한다.
 spring.jpa.show-sql=true
-
 # MySQL 을 사용할 것.
 spring.jpa.database=mysql
-
-# DDL 정의시 데이터베이스의 고유 기능을 사용합니다. (우린 사용 X ??)
+# DDL생성시 데이터베이스 고유의 기능을 사용하는가?
 # ex) 테이블 생성, 삭제 등
 spring.jpa.generate-ddl=false
+
 
 # MySQL 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
