패키지 보이게끔 빈 class file 넣었습니다.

--- a/assetManager/src/main/resources/application.properties
+++ b/assetManager/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=8888
 # 스키마생성 (create, create-drop, update:변경 부분만 반영, validate, none)
 # table을 자동생성할것인지 , 수동생성할것인지
 # 큰규모의 프로젝트는 테이블을 별도로 생성하고 코드를 작성하는 것이 일반적이다.
+# ★★★★★ 절대 테스트 목적으로라도 update => create로 바꾸지 말 것 (우리 데이터, 테이블 다 날라감 그럼)
 spring.jpa.hibernate.ddl-auto=update
 # API 호출시, SQL 문을 콘솔에 출력한다.
 spring.jpa.show-sql=true
