feat: Spring Security 적용되지 않도록 처리 및 CoinController 생성

--- a/assetManager/src/main/resources/application.properties
+++ b/assetManager/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8888
 
+# default context-path는 /이다 ('')
+server.servlet.context-path=/app
 
 # 스키마생성 (create, create-drop, update:변경 부분만 반영, validate, none)
 # table을 자동생성할것인지 , 수동생성할것인지
