--- a/assetManager/pom.xml
+++ b/assetManager/pom.xml
@@ -19,7 +19,24 @@
 	</properties>
 	<dependencies>
 
-		<!-- @NotNull 등 유효성검사를 위한 lib (기본 내장된 nullable = false 보다 낫다고 하는데 아직 잘 모르겠음) -->
+		<!-- JWT 토큰인증방식(1) - java.jwt (for 로그인, 로그아웃) -->
+		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+		<!-- <dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.2.1</version>
+		</dependency> -->
+
+		<!-- JWT 토큰인증방식(2) - jjwt (for 로그인, 로그아웃) -->
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+		<!-- @NotNull 등 유효성검사를 위한 lib (기본 내장된 nullable = false 보다 낫다고 하는데 아직 잘 
+			모르겠음) -->
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
 			<groupId>javax.validation</groupId>
