--- a/assetManager/bin/src/main/resources/application.properties
+++ b/assetManager/bin/src/main/resources/application.properties
@@ -1,26 +1,29 @@
 server.port=8888
 
-# default context-path는 /이다 ('')
+# default context-pathë /ì´ë¤ ('')
 server.servlet.context-path=/app
 
-# 스키마생성 (create, create-drop, update:변경 부분만 반영, validate, none)
-# table을 자동생성할것인지 , 수동생성할것인지
-# 큰규모의 프로젝트는 테이블을 별도로 생성하고 코드를 작성하는 것이 일반적이다.
-# ★★★★★ 절대 테스트 목적으로라도 update => create로 바꾸지 말 것 (우리 데이터, 테이블 다 날라감 그럼)
+# ì¤í¤ë§ìì± (create, create-drop, update:ë³ê²½ ë¶ë¶ë§ ë°ì, validate, none)
+# tableì ìëìì±í ê²ì¸ì§ , ìëìì±í ê²ì¸ì§
+# í°ê·ëª¨ì íë¡ì í¸ë íì´ë¸ì ë³ëë¡ ìì±íê³  ì½ëë¥¼ ìì±íë ê²ì´ ì¼ë°ì ì´ë¤.
+# âââââ ì ë íì¤í¸ ëª©ì ì¼ë¡ë¼ë update => createë¡ ë°ê¾¸ì§ ë§ ê² (ì°ë¦¬ ë°ì´í°, íì´ë¸ ë¤ ë ë¼ê° ê·¸ë¼)
 spring.jpa.hibernate.ddl-auto=update
-# API 호출시, SQL 문을 콘솔에 출력한다.
+# API í¸ì¶ì, SQL ë¬¸ì ì½ìì ì¶ë ¥íë¤.
 spring.jpa.show-sql=true
-# MySQL 을 사용할 것.
+# MySQL ì ì¬ì©í  ê².
 spring.jpa.database=mysql
-# DDL생성시 데이터베이스 고유의 기능을 사용하는가?
-# ex) 테이블 생성, 삭제 등
+# DDLìì±ì ë°ì´í°ë² ì´ì¤ ê³ ì ì ê¸°ë¥ì ì¬ì©íëê°?
+# ex) íì´ë¸ ìì±, ì­ì  ë±
 spring.jpa.generate-ddl=false
 
 
-# MySQL 설정
+# MySQL ì¤ì 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://database-1.cthegcy1bp8f.ap-northeast-2.rds.amazonaws.com:3306/Assets?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://192.168.0.24:3306/assetmanager?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=admin
 spring.datasource.password=12345678
 logging.level.org.hibernate=info
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# 故 AWS 
+# spring.datasource.url=jdbc:mysql://database-1.cthegcy1bp8f.ap-northeast-2.rds.amazonaws.com:3306/Assets?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
