--- a/assetManager/pom.xml
+++ b/assetManager/pom.xml
@@ -113,6 +113,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
