--- a/assetManager/src/main/resources/application.properties
+++ b/assetManager/src/main/resources/application.properties
@@ -25,5 +25,7 @@ spring.datasource.password=12345678
 logging.level.org.hibernate=info
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.data.mongodb.port=27017 
+
 # 故 AWS 
 # spring.datasource.url=jdbc:mysql://database-1.cthegcy1bp8f.ap-northeast-2.rds.amazonaws.com:3306/Assets?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
