--- a/assetManager/bin/pom.xml
+++ b/assetManager/bin/pom.xml
@@ -113,6 +113,16 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.mongodb</groupId>
+		    <artifactId>mongo-java-driver</artifactId>
+		    <version>3.12.7</version>
+		</dependency>	
 	</dependencies>
 
 	<build>
